--- a/upcoming-release-notes/175.md
+++ b/upcoming-release-notes/175.md
@@ -3,4 +3,4 @@ category: Maintenance
 authors: [trevdor]
 ---
 
-Push CI builds to new `actualbudget` Docker Hub organization.
+Push Docker images to new `actualbudget` Docker Hub organization.
