--- a/upcoming-release-notes/182.md
+++ b/upcoming-release-notes/182.md
@@ -3,4 +3,4 @@ category: Features
 authors: [intiplink]
 ---
 
-Add support for armv6l (alpine based images)
+Add support for armv6l (Alpine-based images only)
