Fix authors not being a list

--- a/upcoming-release-notes/245.md
+++ b/upcoming-release-notes/245.md
@@ -1,6 +1,7 @@
 ---
 category: Features
-authors: DistroByte
+authors: 
+    - DistroByte
 ---
 
 Increase file size limits to double previous value to eliminate `PayloadTooLargeError`
