--- a/upcoming-release-notes/245.md
+++ b/upcoming-release-notes/245.md
@@ -1,7 +1,7 @@
 ---
 category: Features
-authors: 
-    - DistroByte
+authors:
+  - DistroByte
 ---
 
-Increase file size limits to double previous value to eliminate `PayloadTooLargeError`
+Make upload limits configurable via env vars to allow for larger files to be uploaded.
