Modify release notes

--- a/upcoming-release-notes/249.md
+++ b/upcoming-release-notes/249.md
@@ -3,4 +3,4 @@ category: Bugfix
 authors: [UnexomWid]
 ---
 
-Fix default data dir when the config exists in the project root
+Fix config file not being loaded from the project root by default
