--- a/upcoming-release-notes/281.md
+++ b/upcoming-release-notes/281.md
@@ -1,6 +1,6 @@
 ---
 category: Bugfix
-authors: [MatissJanis]
+authors: [MikesGlitch, MatissJanis]
 ---
 
 Fix: `ERR_UNSUPPORTED_ESM_URL_SCHEME` by upgrading node-migrate to v2.0.1
