--- a/upcoming-release-notes/307.md
+++ b/upcoming-release-notes/307.md
@@ -3,4 +3,4 @@ category: Maintenance
 authors: [MatissJanis]
 ---
 
-Upgrade deprecated github checkout action from v2 to v3
+Upgrade deprecated github actions
