--- a/upcoming-release-notes/312.md
+++ b/upcoming-release-notes/312.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [joewashear007]
 ---
 
-Add option to authenticate with HTTP header from Auth Proxy. Set new env `ACTUAL_LOGIN_METHOD` = 'header' and make sure your proxy set the `X-ACTUAL-PASSWORD` to your actual password. To limit the hosts that are allowed to send the header auth, use the env `ACTUAL_TRUSTED_PROXIES` with a list of command separated Cidrs (default: known internal ip ranges: `[10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, fc00::/7, ::1/128]`). 
+Add option to authenticate with HTTP header from Auth Proxy.
