Update release notes

--- a/upcoming-release-notes/355.md
+++ b/upcoming-release-notes/355.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [hostyn]
 ---
 
-Add optional overwriteMaxHistoricalDays property to IBank and add BANKINTER_BKBKESMM bank adapter
+Add BANKS_WITH_LIMITED_HISTORY constant and Implement BANKINTER_BKBKESMM Bank Adapter
