--- a/upcoming-release-notes/405.md
+++ b/upcoming-release-notes/405.md
@@ -3,5 +3,4 @@ category: Bugfix
 authors: [spideraxal]
 ---
 
-Modified GoCardless Integration for ING (Romania):
-- Note will be updated once a transaction gets booked
+Modified GoCardless Integration for ING (Romania) so that the `notes` field will be updated once a transaction gets booked.
