--- a/upcoming-release-notes/454.md
+++ b/upcoming-release-notes/454.md
@@ -1,6 +1,6 @@
 ---
 category: Enhancements
-authors: DirgoSalga
+authors: [DirgoSalga]
 ---
 
 Add integration of Rheinhessen Sparkasse (SPK_WORMS_ALZEY_RIED_MALADE51WOR) to the GoCardless app
