--- a/upcoming-release-notes/454.md
+++ b/upcoming-release-notes/454.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [DirgoSalga]
 ---
 
-Add integration of Rheinhessen Sparkasse (SPK_WORMS_ALZEY_RIED_MALADE51WOR) to the GoCardless app
+Add integration of Rheinhessen Sparkasse (`SPK_WORMS_ALZEY_RIED_MALADE51WOR`) to the GoCardless app
