--- a/upcoming-release-notes/486.md
+++ b/upcoming-release-notes/486.md
@@ -1,6 +1,6 @@
 ---
 category: Enhancements
-authors: [psybers]
+authors: [clutwo]
 ---
 
 Change access_valid_for_days from "180" to "179" for institution "EASYBANK_BAWAATWW"
