--- a/upcoming-release-notes/502.md
+++ b/upcoming-release-notes/502.md
@@ -3,4 +3,4 @@ category: Maintenance
 authors: [meonkeys]
 ---
 
-Simplify Docker setup. Use built-in init wrapper instead of tini.
+use built-in Docker init, remove tini
