--- a/upcoming-release-notes/527.md
+++ b/upcoming-release-notes/527.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [lelemm]
 ---
 
-Commands to enable/disable OpenID from console.
+Commands to enable/disable OpenID from console. Also, enabling to login with oauth2 (for github).
