--- a/upcoming-release-notes/531.md
+++ b/upcoming-release-notes/531.md
@@ -3,4 +3,4 @@ category: Enhancements
 authors: [DennaGherlyn]
 ---
 
-Add gocardless formatter for Stadtsparkasse Düsseldorf (Germany)
+Add GoCardless formatter for `SSK_DUSSELDORF_DUSSDEDDXXX` Stadtsparkasse Düsseldorf (Germany) 
